# RecruitAgent

./: .gitignore  README.md  chat_demo.py  demo.py  demo_auto.py  demo_full.py  demo_persistence.py  main.py  pyproject.toml
.kiro/specs/chat-interface/: design.md  requirements.md  tasks.md
.kiro/specs/openai-integration/: design.md  requirements.md  tasks.md
.kiro/specs/tata-recruitment-assistant/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/tata/: __init__.py
src/tata/agent/: __init__.py  agent.py  client.py  conversation.py  executor.py  models.py  registry.py
src/tata/dependency/: __init__.py  dependency.py
src/tata/interaction/: __init__.py  greeting.py
src/tata/language/: __init__.py  banned_words.py  checker.py
src/tata/memory/: __init__.py  memory.py
src/tata/modules/: __init__.py
src/tata/modules/calendar/: __init__.py  invite.py
src/tata/modules/headhunting/: __init__.py  headhunting.py
src/tata/modules/jobad/: __init__.py  jobad.py
src/tata/modules/profile/: __init__.py  profile.py
src/tata/modules/report/: __init__.py  (+2 more)
src/tata/output/: __init__.py  generator.py
src/tata/persistence/: __init__.py  sqlite.py
src/tata/session/: __init__.py  session.py
src/tata/validator/: __init__.py  validator.py
src/tata/web/: __init__.py  models.py  server.py  suggestions.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_models.py  test_calendar.py  test_candidate_report.py  test_conversation.py  test_dependency.py  test_di_review.py  test_executor.py  test_funnel_report.py  test_interaction.py  test_jobad.py  test_jobad_review.py  test_language.py  test_memory.py  test_openai_client.py  test_openai_integration.py  test_output_generator.py  test_persistence.py  test_profile.py  test_screening.py  test_session.py  test_tool_registry.py  test_validator.py
(+5 files in other folders)
